# f-chat-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: cache.rs  client.rs  data.rs  http_endpoints.rs  lib.rs  protocol.rs  session.rs  tests.rs  util.rs
