[package]
name = "f-chat-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "^0.17" # Websockets
serde_json = "1.0" # JSON
serde = { version = "1.0", features = ["derive"] } # Derive macros & manual trait impl
reqwest = { version = "^0.11", features = ["rustls-tls-native-roots", "gzip", "deflate", "json"] } # HTTP Requests (JSON endpoints)